plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
	id "org.liquibase.gradle" version "2.2.0"
}

configurations {
	liquibaseRuntime
}

liquibase {
	activities {
		main {
			changeLogFile 'src/main/resources/db.changelog/db.changelog-master.xml'
			url 'jdbc:mysql://localhost:3306/FloralLaceServer'
			username 'floral'
			password 'localhostFloral'
		}
	}
}

group = 'ru.myitschool'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}



dependencies {

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.liquibase:liquibase-core:4.21.1'
	implementation 'info.picocli:picocli:4.7.1'
	implementation 'org.postgresql:postgresql:42.5.4'
	liquibaseRuntime 'org.liquibase:liquibase-core:4.21.1'
	runtimeOnly 'org.liquibase:liquibase-core:4.21.1'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.yaml:snakeyaml:2.0'
	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	testImplementation 'com.h2database:h2:2.1.214'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.4'
}

tasks.named('test') {
	useJUnitPlatform()
}
